--- a/Bank_Customer_Churn.ipynb
+++ b/Bank_Customer_Churn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1udzs6VDy10j1wOo1AGh5N-SUeaj7oekV",
-      "authorship_tag": "ABX9TyPxZlpvqcc+JLIJwQmvvYVC",
+      "authorship_tag": "ABX9TyM8PjmndE0hDt5Ojw8bTJc9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "R-22vvMDikD6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "71XdeSiWC8bS"
       },
@@ -109,7 +109,7 @@
         "id": "e3OlvYaJUUXL",
         "outputId": "f9586e96-4613-4c7d-cb9a-c647a996b30c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -546,7 +546,7 @@
       "metadata": {
         "id": "uaUg65TVXHhR"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -583,7 +583,7 @@
         "id": "2o9PrcRLWJnq",
         "outputId": "ffa0fcd8-f0eb-4cfa-94d9-55e373d2c440"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -636,7 +636,7 @@
         "id": "cedAUIGBXSx5",
         "outputId": "9f6809c9-2cee-4aa4-8221-2f1993462a3c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -682,7 +682,7 @@
         "id": "VWeL0ybuQTpB",
         "outputId": "1bcf6c62-77bb-4494-e1b4-9269dd555c3f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -728,7 +728,7 @@
         "id": "-5twmgakMoFy",
         "outputId": "1997ca81-9dfc-4c99-d976-97f6ab4663b1"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -789,7 +789,7 @@
         "id": "qQryDxgrZ75o",
         "outputId": "55ad55ed-3b31-4ac9-e2be-270e2e1d47d4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -850,7 +850,7 @@
         "id": "r-Rp6wnjalp4",
         "outputId": "92758dd5-e7f2-49bb-e2f8-a7aa6b1febb8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -911,7 +911,7 @@
         "id": "y7WDZbhZvOG0",
         "outputId": "c028e051-a600-4719-9b80-08b734952d1d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -966,7 +966,7 @@
         "id": "e2g8V4GCfpKk",
         "outputId": "6b2e226a-91a1-4936-f5a0-81b925d4220d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1021,7 +1021,7 @@
         "id": "_GD-z4V1lyAl",
         "outputId": "85a9ddd8-9e2e-4303-bc80-04c9642f7267"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1077,7 +1077,7 @@
         "id": "Oor3q1PunfGw",
         "outputId": "d29bfa45-fca1-4f8a-cd90-74d7c0199e2a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1130,7 +1130,7 @@
         "id": "fZ1Mr3HiX_MU",
         "outputId": "bc5d16e6-283c-493a-c4a9-22cfaafab9b3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1186,7 +1186,7 @@
         "id": "T7UOfPYmWeBG",
         "outputId": "853cce80-dc4f-449f-c8e7-eb3dbe7566ac"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1221,7 +1221,7 @@
         "id": "f1upkiCvVd-Y",
         "outputId": "bc2aee04-9c33-4dd6-a281-a5f2ca3ebe72"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1277,7 +1277,7 @@
         "id": "NTPup88TYpYH",
         "outputId": "fea93f8f-49c0-4dcb-8440-b91aeaf5a5e8"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1688,7 +1688,7 @@
         "id": "fewmIuYdX0C8",
         "outputId": "846d2964-51ee-4944-e2c2-7759349c83b1"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2131,7 +2131,7 @@
       "metadata": {
         "id": "ic3v3WlYVGWI"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2163,7 +2163,7 @@
         "id": "wGsCmQQWz_Sv",
         "outputId": "2ad373a9-ef51-47f3-bb0c-146bd78818cd"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2557,7 +2557,7 @@
         "id": "R_TtiP7UctEI",
         "outputId": "4e2fcc8e-5f73-4a94-cb74-b17b8b04ef3b"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2898,7 +2898,7 @@
         "id": "Ryir6EduhwcF",
         "outputId": "2f340ebf-5449-4fe6-9296-b7b983104e11"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3241,7 +3241,7 @@
         "id": "K_5BAckoyNV8",
         "outputId": "ee17b15b-87ca-47b1-e697-b130dbd8b750"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3555,7 +3555,7 @@
         "id": "WsVOxq8l0zqg",
         "outputId": "a9f6bf20-673c-497f-ca08-2d4c0364908b"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3998,7 +3998,7 @@
       "metadata": {
         "id": "tral4YAD-xBP"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4018,7 +4018,7 @@
       "metadata": {
         "id": "WA1msvlU-qWx"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4052,7 +4052,7 @@
       "metadata": {
         "id": "v6iWcuq7_vJA"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4068,7 +4068,7 @@
         },
         "outputId": "55b74356-d429-4fcf-82ad-b1c0e218dffe"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4108,7 +4108,7 @@
       "metadata": {
         "id": "5Ew-2WCG_1Ry"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4133,7 +4133,7 @@
         },
         "outputId": "0cd1757a-c000-4233-e455-63be97b03839"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4200,7 +4200,7 @@
       "metadata": {
         "id": "Q40wLv4U_-sn"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4216,7 +4216,7 @@
       "metadata": {
         "id": "0JPIqLfUACOy"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4232,7 +4232,7 @@
         },
         "outputId": "c095b4e3-0116-4f24-da65-adac7d7a093e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4292,7 +4292,7 @@
         "id": "-Pph7VgyS7iW",
         "outputId": "f68a09e1-d24a-4d61-8f93-61e7104b9cd6"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4711,7 +4711,7 @@
         },
         "outputId": "f2a2ca4b-5a7e-40f6-d4ca-31df62fa452b"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4721,6 +4721,26 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Kesimpulan"
+      ],
+      "metadata": {
+        "id": "daDwU0iLXPG6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dari analisis dan percobaan ini, dapat disimpulkan bahwa hampir seluruh pelanggan memutuskan untuk keluar atau berhenti berlangganan ketika pelanggan tersebut memberikan komplain, sehingga untuk mengatasi permasalahan tersebut, cara yang dapat dilakukan adalah dengan sebisa mungking membuat pelanggan tidak melakukan komplain. Untuk mengatasi permasalahan tersebut, perlu dilakukan penelitian lebih lanjut.\n",
+        "\n",
+        "Sebagai tindak pendeteksian dini, pembuatan model untuk memprediksi apakah pelanggan akan melakukan komplain merupakan tindakan yang bijak untuk menjaga pelanggan tidak keluar atau tetap berlangganan, sehingga tidak terjadi kerugian dari sisi bisnis."
+      ],
+      "metadata": {
+        "id": "vAs-n8VpXU78"
+      }
     }
   ]
 }
